--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   
 
   </div>
-  <a href="http://www.eyebrows.ugu.pl/despicableme/">Despicable me!</a>
+  <a href="img/despicableme/">Despicable me!</a>
   </font>
 </div>
 </body>
