--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   
 
   </div>
-  <a href="https://stasixx.github.io/despicableme/">Despicable me!</a>
+  <a href="https://stasixx.github.io/despicableme.html">Despicable me!</a>
   </font>
 </div>
 </body>
