--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   }
   #alessia
   {
+	  margin-left: 25px;
   width: 500px;
   float: left;
   }
@@ -50,16 +51,16 @@
   
   <div id="alessia">
   
- <br /><br /> <h4>Alessia Cara</h4>
- <br /><br /> <a target="_blank" title="Listen on Spotify" href="https://open.spotify.com/album/0xK3vVeEMBZCn0CVTTaYL9">'The other side'</a> <br />
+ <h4>Alessia Cara</h4>
+ <a target="_blank" title="Listen on Spotify" href="https://open.spotify.com/album/0xK3vVeEMBZCn0CVTTaYL9">'The other side'</a> <br />
   <br />
   
-  <br /><br />Somewhere far, far away <br />
-  <br /><br />Beyond the crowds and city lights <br />
- <br /><br /> I wanna open up my eyes <br />
- <br /><br /> And see you on the other side <br /><br />
+  Somewhere far, far away <br />
+  Beyond the crowds and city lights <br />
+  I wanna open up my eyes <br />
+  And see you on the other side <br /><br />
  
- <br /><br /> <img src="img/alessiacara.jpg" width="200" height="200"/> <br /> <br />
+ <img src="img/alessiacara.jpg" width="200" height="200"/> <br /> <br />
    </div>
    
    <div id="ellie">
